--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "chart.js": "^4.4.1",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
@@ -44,5 +45,6 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.5"
-  }
+  }, 
+  "proxy": "http://localhost:5000"
 }
